и опять это апи

--- a/Sunduk.PWA/Dialogs/FeedBackDialog.razor
+++ b/Sunduk.PWA/Dialogs/FeedBackDialog.razor
@@ -52,11 +52,19 @@
     {
         if (string.IsNullOrWhiteSpace(Name))
         {
-            Snackbar.Add("Имя не должно быть пустым!", Severity.Error);
+            Snackbar.Add("Введите имя!", Severity.Error);
+        }
+        else if (Name.Length > 30)
+        {
+            Snackbar.Add("Имя слишком длинное!", Severity.Error);
         }
         else if (string.IsNullOrWhiteSpace(Message))
         {
             Snackbar.Add("Сообщение не должно быть пустым!", Severity.Error);
+        }
+        else if (Message.Length > 300)
+        {
+            Snackbar.Add("Сообщение слишком длинное, воспользуйтесь электронной почтой!", Severity.Error);
         }
         else
         {
@@ -64,8 +72,9 @@
 
             try
             {
-
-                Status = await http.GetStringAsync($"https://sunduk-api.azurewebsites.net/sendmessage|{WebUtility.UrlEncode(Encode(Name))}|{WebUtility.UrlEncode(Encode(Message))}");
+                var tempName = WebUtility.UrlEncode(Name);
+                var tempMessage = WebUtility.UrlEncode(Message);
+                Status = await http.GetStringAsync($"https://localhost:7269/sendmessage|{tempName}|{tempMessage}");
 
                 if (Status == "Ok")
                 {
@@ -85,14 +94,14 @@
         }
     }
 
-    private string Encode(string message)
-    {
-        return message
-            .Replace(@" ", "_1_")
-            .Replace(@"/", "__1_")
-            .Replace(@"\", "___1_")
-            .Replace(@".", "____1_")
-            .Replace(@"@", "_____1_");
-    }
-
+    //private static string Encode(string text)
+    //{
+    //    return text
+    //        .Replace(@" ", "__space__")
+    //        .Replace("/", "__slash__")
+    //        .Replace("\\", "__backslash__")
+    //        .Replace(".", "__dot__")
+    //        .Replace("|", "__pipeline__")
+    //        .Replace("@", "__at__");
+    //}
 }
